# Computer

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  test.py
.github/workflows/: pullFromShare.yml  pushToCompetitionPCing.yml  pushToComputer.yml  pushToShare.yml  pushToShareServers.yml  trigerPullServer.yml
Dashboard/: Dashboard.py  README.txt
Dashboard/CarCommunication/: threadRemoteHandlerPC.py
Dashboard/GUI/: DashBoard.py  GUI_start.py  Manager.py
Dashboard/objects/: Alerts.py  Button.py  Button_Text.py  Camera.py  FloatingPiece.py  Map.py  Object.py  ScrollSlider.py  Slider.py  Table.py
Dashboard/setup/: Alerts.json  CarData.json  PairingData.json
Dashboard/states/: DashBoard.py  Pairing.py
Dashboard/utils/: CarData.json  GUI_start.py  Manager.py  State.py  threadRemoteHandlerPC.py
Demo/: Demo.py  UI.py  threadRemoteHandlerPC.py
SemaphoreStreamSIM/: udpStreamSIM.py
UI/: demo.py
UI/objects/: FloatingPiece.py  Object.py  Table.py
UI/states/: Pairing.py
UI/utils/: CarData.json  Manager.py  threadRemoteHandlerPC.py
UI_Project/objects/: Alerts.py  Button.py  Map.py
UI_Project/states/: DashBoard.py
UI_Project/utils/: GUI_start.py  PairingData.json  State.py
carsAndSemaphoreStreamSIM/: udpStreamSIM.py
demo/: UI.py  threadRemoteHandlerPC.py
ros_ws/src/dashboard/: package.xml  setup.cfg  (+1 more)
ros_ws/src/demo/: package.xml  setup.cfg  setup.py
ros_ws/src/demo/demo/: main.py
servers/carsAndSemaphoreStreamSIM/: udpStreamSIM.py
trafficCommunicationServer/: TrafficCommunication.py  locsys_SIM.py  tcpServer.py  udpStream.py
(+18 files in other folders)
